--- a/equipe.html
+++ b/equipe.html
@@ -39,7 +39,7 @@ layout: default
 
                         <div class="media-body">
                             <h3><a href="#">Ary Demosthenes</a></h3>
-                            <div class="classes-description">
+                            <div class="classes-description text-justify">
                                 <p>Bacharel em administração de empresas, Ary Demostrhenes Neto ouviu de seus primeiros professores que ele não tinha a menor aptidão para a dança. Mas a timidez excessiva e a vontade de dominar a dança fizeram com que ele insistisse no aprendizado. Anos depois, sua dedicação e amor à dança fizeram com que se tornasse um dos melhores e mais carismáticos professores de dança de salão de Goiás.</p>
                                 <p>Ary começou a dançar em 1991 e passou por muitas escolas até se tornar professor de dança de salão. Iniciou os estudos em dança no Mvsika Centro de Estudos e, após seis anos de prática, se tornou professor na Dança & Cia onde lecionou até 2008, ano em que Ary fundou sua primeira escola: a Movimento Companhia de Dança.</p>
                                 <p>Em 2010, movido por novos desafios e projetos, o professor fundou a Compassos Studio de Dança. Com fortes valores de amizade e fraternidade entre alunos e equipe, a escola cresce no coração do Jardim América desde então.</p>
@@ -47,9 +47,6 @@ layout: default
                                 <p>Entre os trabalhos de maior destaque estão sua atuação como diretor, coreógrafo e dançarino nos espetáculo Tudo Tem uma Primeira Vez (2012) e A Vida como Ela É (2014). Além disso, já recebeu prêmios como Destaque da Dança de Salão (2002) e de honra a mérido, como Professor Destaque (2013).</p>
                                 <p>Para compor sua formação, Ary Demosthenes participou de cursos em Florianópolis, Rio de Janeiro e São Paulo, além de Goiânia. Entre os professores que contribuiram para sua capacitação destacam-se Alessandra Cardoso (GO), Guilherme Maia (GO), Cláudia Dieguez (GO), Luis Cláudio Fernandes (GO), Jaime Arôxa (RJ), Fabiano Vivas (RJ), Edson Nunes(SC), Lídio Freitas (RJ), Cristóvão Cristianis (RJ), Bianca Gonzales (RJ) e Rogério Mendonça (SP).</p>
                                 <p>Além da construção da Compassos Studio de Dança, o principal legado de Ary tem sido contribuir para a formação dos inúmeros professores e dançarinos e para a qualidade de vida de alunos que acreditam que a dança de salão seja capaz de transformar suas vidas para melhor.</p>
-                                <p class="with-icon date">Junho 20, 2017</p>
-                                <p class="with-icon time">11:30 - 13:30</p>
-                                <p class="with-icon person"><a href="#">Ary Demosthenes</a></p>
                             </div>
                         </div>
                     </div>
@@ -64,14 +61,10 @@ layout: default
 
                         <div class="media-body">
                             <h3><a href="#">Giovanna Leoni</a></h3>
-                            <div class="classes-description">
+                            <div class="classes-description text-justify">
                                 <p>Giovanna Leoni é formada em Artes Cênicas pela Escola Técnica da Universidade Federal do Paraná e dançarina de Dança de Salão Brasileira. Estudos de balé, dança desportiva, profilaxia do movimento, anatomia para o movimento, força e estiramento aplicados à dança também compõem sua formação.</p>
-                                <p>Entre os professores, coreógrafos e diretores responsáveis pela sua formação destacam-se: Jaime Aroxa (Brasil), Marcia Pinheiro (Brasil), Kaka Boa Morte (Brasil), Lidio freitas (Brasil), Svetlana Burkun (Rússia), Keith Andrew Hawley (Australia), Lisa Souissa (França) e Macau United DanceSport Association (Muda).  Seus últimos e mais recentes mestres foram os coreógrafos de salsa Angel Llao e Lucia Medina (Bi Campeões Espanha de Salsa).</p>
-                                <p>Dos trabalhos no exterior destacam-se: Star Cruises (Asia), Danze Fantasy Productions (Inglaterra), BPM Productions (Hong Kong), LDS Productions & Events (Macau), Dança Brasil (Macau), Vyas Brothers Dance Casting (Índia).</p>
+                                <p>Entre os professores, coreógrafos e diretores responsáveis pela sua formação destacam-se: Jaime Aroxa (Brasil), Marcia Pinheiro (Brasil), Kaka Boa Morte (Brasil), Lidio freitas (Brasil), Svetlana Burkun (Rússia), Keith Andrew Hawley (Australia), Lisa Souissa (França) e Macau United DanceSport Association (Muda).  Seus últimos e mais recentes mestres foram os coreógrafos de salsa Angel Llao e Lucia Medina (Bi Campeões Espanha de Salsa). De seus trabalhos no exterior destacam-se: Star Cruises (Asia), Danze Fantasy Productions (Inglaterra), BPM Productions (Hong Kong), LDS Productions & Events (Macau), Dança Brasil (Macau), Vyas Brothers Dance Casting (Índia).</p>
                                 <p>Giovanna Leoni é fundadora da “The Company - Dance Production”, um projeto que pretende repaginar a Dança de Salão do Brasil.</p>
-                                <p class="with-icon date">Junho 20, 2017</p>
-                                <p class="with-icon time">11:30 - 13:30</p>
-                                <p class="with-icon person"><a href="#">Giovanna Leoni</a></p>
                             </div>
                         </div>
                     </div>
@@ -86,13 +79,10 @@ layout: default
 
                         <div class="media-body">
                             <h3><a href="#">Leandro Matos</a></h3>
-                            <div class="classes-description">
+                            <div class="classes-description text-justify">
                                 <p>Tendo iniciado na dança em 2003, Leandro Matos é um dos professores que fazem parte da equipe da Compassos desde sua fundação. Além de experiência como professor, Leandro atua como dançarino e coreógrafo de espetáculos ou apresentações particulares, tais como casamentos e aniversários.</p>
                                 <p>Em sua trajetória como professor atuou também nas escolas Dança e Cia, Movimento e Christiane Rezende, além de lecionar para turmas especiais de empresas como o Banco do Brasil e Caixa Econômica Federal.</p>
                                 <p>Entre os professores que marcaram sua formação destacam-se Ary Demosthenes, Fabiano Vivas, Lídio Freitas, Marco Aurélio, Rogério Medonça, Bianca Carvalho e Jaime Arôxa.</p>
-                                <p class="with-icon date">Junho 20, 2017</p>
-                                <p class="with-icon time">11:30 - 13:30</p>
-                                <p class="with-icon person"><a href="#">Leandro Matos</a></p>
                             </div>
                         </div>
                     </div>
@@ -107,13 +97,10 @@ layout: default
 
                         <div class="media-body">
                             <h3><a href="#">Mariana Rabelo</a></h3>
-                            <div class="classes-description">
+                            <div class="classes-description text-justify">
                                 <p>Professora, coreógrafa e bailarina de Dança de Salão na Compassos Studio de Dança, Mariana Rabelo iniciou os estudos em dança aos 11 anos. Também possui experiência em balé clássico e contemporâneo, jazz, teatro, improvisação, pilates para bailarinos e dança desportiva.</p>
                                 <p>Mariana Rabelo também compõe a equipe de bailarinos da The Company – Dance Production, grupo parceiro da Compassos Studio de Dança, liderado pela dançaria e coreógrafa Giovanna Leoni. Enquanto bailarina da The Company, Mariana se apresentou em Macau (China) durante o ano de 2015, por meio do grupo SalSamba.</p>
                                 <p>Entre os professores, coreógrafos e diretores responsáveis por sua formação destacam-se Ary Demosthenes, Rubia Reis, Jairo Rodarte, Jaime Aroxa e Giovanna Leoni.</p>
-                                <p class="with-icon date">Junho 20, 2017</p>
-                                <p class="with-icon time">11:30 - 13:30</p>
-                                <p class="with-icon person"><a href="#">Mariana Rabelo</a></p>
                             </div>
                         </div>
                     </div>
@@ -128,12 +115,9 @@ layout: default
 
                         <div class="media-body">
                             <h3><a href="#">Rafael Rabelo Silva</a></h3>
-                            <div class="classes-description">
+                            <div class="classes-description text-justify">
                                 <p>Coreógrafo e dançarino profissional, Rafael Rabelo compõe o time da Compassos desde sua fundação. Com influência em dança desportiva, Rafael se apresentou em Macau (China) durante o ano de 2015 com o grupo SalSamba. Os espetáculos foram apresentados por meio da The Company – Dance Prodution, grupo parceiro da Compassos e liderado pela coreógrafa e dançarina Giovanna Leoni.</p>
                                 <p>Com participação em diversos cursos de formação de professores em diferentes estados brasileiros, Rafael Rabelo tem como referência professional os professores Ary Demosthenes, Rubia Reis, Jairo Rodarte, Jaime Arôxa e Giovanna Leoni.
-                                <p class="with-icon date">Junho 20, 2017</p>
-                                <p class="with-icon time">11:30 - 13:30</p>
-                                <p class="with-icon person"><a href="#">Rafael Rabelo Silva</a></p>
                             </div>
                         </div>
                     </div>
@@ -148,12 +132,9 @@ layout: default
 
                         <div class="media-body">
                             <h3><a href="#">Renata Ferreira de Oliveira</a></h3>
-                            <div class="classes-description">
+                            <div class="classes-description text-justify">
                                 <p>Formada em Educação Física pela Universidade Estadual de Goiás (UEG), Renata Ferreira de Oliveira atua na dança de salão há 13 anos. Sua formação como dançarina teve início na Dança & Cia Companhia de Dança, sob orientação de Ary Demostenes.</p>
                                 <p>Com pós-graduações nas áreas de Fisiologia do Esporte e Treinamento Desportivo para Grupos Especiais, é uma das professoras que compõe o time da Compassos desde sua fundação. Além da dança de salão, acumula conhecimento e experiência em áreas como o balé clássico, street dance, dança do ventre, ritmos e axé.</p>
-                                <p class="with-icon date">Junho 20, 2017</p>
-                                <p class="with-icon time">11:30 - 13:30</p>
-                                <p class="with-icon person"><a href="#">Renata Ferreira de Oliveira</a></p>
                             </div>
                         </div>
                     </div>
@@ -168,12 +149,9 @@ layout: default
 
                         <div class="media-body">
                             <h3><a href="#">Thaynara Santiago</a></h3>
-                            <div class="classes-description">
+                            <div class="classes-description text-justify">
                                 <p>Professora da Compassos há 4 anos, Thaynara Santiago é apaixonada por dança desde criança. Além de dar aulas de dança de salão, já estudou jazz e balé clássico.</p>
                                 <p>Thaynara também promove a dança como uma ferramenta de transformação social. Por meio de grupos voluntários, leva o ensino da dança de salão a pessoas que necessitam de auxílio terapêutico, em movimentos de valorização à vida.</p>
-                                <p class="with-icon date">Junho 20, 2017</p>
-                                <p class="with-icon time">11:30 - 13:30</p>
-                                <p class="with-icon person"><a href="#">Thaynara Santiago</a></p>
                             </div>
                         </div>
                     </div>
